--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Webakery - Crafting Digital Experiences</title>
       <link rel="stylesheet" href="styles.css">
-      <link rel="icon" type="image/png" href="/templates/logo.png">
+      <link rel="icon" type="image/png" href="/Webakery/templates/logo.png">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
       <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
@@ -69,7 +69,7 @@
       <header class="bg-dark text-white fixed-top" style="border-bottom:2px solid white">
         <div class="container d-flex align-items-center justify-content-between">
           <nav class="d-flex align-items-center">
-            <img src="/templates/logo1.png" height="40" width="40" alt="Logo">
+            <img src="/Webakery/templates/logo1.png" height="40" width="40" alt="Logo">
             &nbsp;&nbsp;&nbsp;
             <ul class="nav">
               <li class="nav-item">
@@ -102,7 +102,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="/templates/4.png" alt="First slide">
+          <img class="d-block w-100" src="/Webakery/templates/4.png" alt="First slide">
           <div class="carousel-caption d-flex flex-column justify-content-center align-items-center" style="color: rgb(19, 19, 19); padding-left: 300px; ">
             <h1  class="dancing-script">Transform your shop with a captivating and stunning website.</h1>
             <a href="#about" class="btn btn-outline-light mt-3" style="font-size: 16px; border: 2px solid rgb(0, 0, 0); color:black; padding: 10px 20px; text-decoration: none; transition: all 0.3s;"
@@ -111,7 +111,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/templates/2.png" alt="Second slide">
+          <img class="d-block w-100" src="/Webakery/templates/2.png" alt="Second slide">
           <div class="carousel-caption d-flex flex-column justify-content-center align-items-center" style="color: white; padding-left: 320px;">
             <h1  class="dancing-script">Ignite your startup with a stunning and dynamic website.</h1>
             <a href="#about" class="btn btn-outline-light mt-3" style="font-size: 16px; border: 2px solid white; padding: 10px 20px; text-decoration: none; transition: all 0.3s;"
@@ -120,7 +120,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/templates/3.png" alt="Third slide">
+          <img class="d-block w-100" src="/Webakery/templates/3.png" alt="Third slide">
           <div class="carousel-caption d-flex flex-column justify-content-center align-items-center" style="color: white; padding-left: 320px;">
             <h1  class="dancing-script">Unleash your potential with a stunning portfolio website.</h1>
             <a href="#about" class="btn btn-outline-light mt-3" style="font-size: 16px; border: 2px solid white; padding: 10px 20px; text-decoration: none; transition: all 0.3s;"
@@ -147,7 +147,7 @@
   </section>
 
 
-  <section id="about" class="about-section";  style="background-image:url('/templates/5.png')"> 
+  <section id="about" class="about-section";  style="background-image:url('/Webakery/templates/5.png')"> 
     <div class="container"><br />
       <div class="about-content">
 
@@ -167,7 +167,7 @@
       </div>
       <div class="about-image" style="padding-top:20px">
 
-        <img src="/templates/about us.jpg"  alt="Team Image">
+        <img src="/Webakery/templates/about us.jpg"  alt="Team Image">
       </div>
     </div>
   </section>
@@ -218,55 +218,55 @@
       <br />
       <div class="service-grid">
         <div class="service-item slide-in">
-            <img src="/templates/staticweb.jpg" alt="Static Website" style="width: 100%; height: 200px; object-fit: cover;">
+            <img src="/Webakery/templates/staticweb.jpg" alt="Static Website" style="width: 100%; height: 200px; object-fit: cover;">
             <h3><b>Static Website</b></h3>
             <p>Get a sleek and professional online presence with our static websites. Ideal for showcasing information with minimal updates, providing a fast and secure experience.</p>
             <div class="price-box">₹ 1500 onwards</div>
         </div>
         <div class="service-item slide-in">
-            <img src="/templates/dw less.jpg" alt="Dynamic Website - Minimal Features" style="width: 100%; height: 200px; object-fit: cover;">
+            <img src="/Webakery/templates/dw less.jpg" alt="Dynamic Website - Minimal Features" style="width: 100%; height: 200px; object-fit: cover;">
             <h3><b>Dynamic Website - Minimal Features</b></h3>
             <p>Engage your audience with our dynamic websites featuring essential interactive elements. Perfect for small businesses needing more functionality than a static site.</p>
             <div class="price-box">₹ 2000 onwards</div>
         </div>
         <div class="service-item slide-in">
-            <img src="/templates/dw more.png" alt="Dynamic Website - More Features" style="width: 100%; height: 200px; object-fit: cover;">
+            <img src="/Webakery/templates/dw more.png" alt="Dynamic Website - More Features" style="width: 100%; height: 200px; object-fit: cover;">
             <h3><b>Dynamic Website - More Features</b></h3>
             <p>Enhance your digital presence with feature-rich dynamic websites. Customizable and scalable, they offer advanced functionality to meet your growing business needs.</p>
             <div class="price-box">₹ 4000 onwards</div>
         </div>
         <div class="service-item slide-in">
-            <img src="/templates/poster.jpg" alt="Poster Designing" style="width: 100%; height: 200px; object-fit: cover;">
+            <img src="/Webakery/templates/poster.jpg" alt="Poster Designing" style="width: 100%; height: 200px; object-fit: cover;">
             <h3><b>Poster Designing</b></h3>
             <p>Capture attention with our striking poster designs. Perfect for events, promotions, and branding, our posters are designed to make a lasting impact.</p>
             <div class="price-box">₹ 400 onwards (Negotiable for bulk orders)</div>
         </div>
         <div class="service-item slide-in">
-            <img src="/templates/Insta.jpg" alt="Promote on Our Insta Page" style="width: 100%; height: 200px; object-fit: cover;">
+            <img src="/Webakery/templates/Insta.jpg" alt="Promote on Our Insta Page" style="width: 100%; height: 200px; object-fit: cover;">
             <h3><b>Promote on Our Insta Page</b></h3>
             <p>Boost your visibility with promotions on our Instagram page. Reach a wider audience and engage with potential customers through our well-curated social media platform.</p>
             <div class="price-box">₹ (Varies)</div>
         </div>
         <div class="service-item slide-in">
-            <img src="/templates/Yt.jpg" alt="YouTube Thumbnail" style="width: 100%; height: 200px; object-fit: cover;">
+            <img src="/Webakery/templates/Yt.jpg" alt="YouTube Thumbnail" style="width: 100%; height: 200px; object-fit: cover;">
             <h3><b>YouTube Thumbnail</b></h3>
             <p>Increase your video views with our eye-catching YouTube thumbnails. Professionally designed to attract clicks and improve your channel's visual appeal.</p>
             <div class="price-box">₹ 600 onwards (Negotiable for bulk orders)</div>
         </div>
         <div class="service-item slide-in">
-            <img src="/templates/Bot.png" alt="Chatbot for Website" style="width: 100%; height: 200px; object-fit: cover;">
+            <img src="/Webakery/templates/Bot.png" alt="Chatbot for Website" style="width: 100%; height: 200px; object-fit: cover;">
             <h3><b>Chatbot for Website</b></h3>
             <p>Enhance customer interaction with our standalone chatbot solutions. Seamlessly integrated into your website to provide instant support and improve user experience.</p>
             <div class="price-box">₹ 1000 onwards</div>
         </div>
         <div class="service-item slide-in">
-            <img src="/templates/bot with website.jpg" alt="Bot Along with Website" style="width: 100%; height: 200px; object-fit: cover;">
+            <img src="/Webakery/templates/bot with website.jpg" alt="Bot Along with Website" style="width: 100%; height: 200px; object-fit: cover;">
             <h3><b>Bot Along with Website</b></h3>
             <p>Combine the power of a website with an integrated chatbot. Streamline customer service and enhance user engagement with this comprehensive solution.</p>
             <div class="price-box">₹ 2500 onwards</div>
         </div>
         <div class="service-item slide-in">
-            <img src="/templates/portfolio.jpg" alt="Portfolio Services - Website (for People)" style="width: 100%; height: 200px; object-fit: cover;">
+            <img src="/Webakery/templates/portfolio.jpg" alt="Portfolio Services - Website (for People)" style="width: 100%; height: 200px; object-fit: cover;">
             <h3><b>Portfolio Services - Website</b></h3>
             <p>Showcase your work with our portfolio websites. Tailored for individuals, these sites highlight your skills and projects, helping you stand out in your field.</p>
             <div class="price-box">₹ 2000 onwards</div>
@@ -275,7 +275,7 @@
     </div>
   </section>
 
-  <section id="contact" style="background-image:url('/templates/6.png'); background-size: cover; background-position: center;" class="text-light py-5">
+  <section id="contact" style="background-image:url('/Webakery/templates/6.png'); background-size: cover; background-position: center;" class="text-light py-5">
     <div class="container">
       <h1 class="display-1" style="font-size:120px; text-align:left">Get In Touch</h1>
       <div class="row py-3"></div>
