--- a/index.html
+++ b/index.html
@@ -368,9 +368,9 @@
         <a href="#" class="me-4 text-light">
           <i class="fas fa-globe"></i>
         </a>
-        <a href="#" class="me-4 text-light">
+        <a href="https://www.linkedin.com/in/webakery-875575320/" class="me-4 text-light">
           <i class="fab fa-linkedin"></i>
-        </a>
+        </a>        
       </div>
       <!-- Right -->
     </section>
